# Artifex

./: ._pyproject.toml  ._requirements.txt  README.md  app.py  pyproject.toml  requirements.txt
artifex/: ._smart_cutting_tool.py  auto_caption.py  main.py  smart_cutting_tool.py
artifex/auto_caption/: auto_caption.py
artifex/cutting_tool/: smart_cutting_tool.py
artifex/downloader/: downloader.py
artifex/styles/: styles.css
scripts/: ._auto_caption.py  extract_audio.py
