[project]
name = "Artifex"
version = "0.1.0"
description = "Artifex simplifies content creation with smart automation, helping you create faster and focus on your ideas."
authors = [
    {name = "vinisvictorelli",email = "vini.svictorelli@gmail.com"}
]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<4"
torch = "==2.2.2",
numpy = "<2"
moviepy = "==2.1.1"
pydub = "==0.25.1"
speechrecognition = "==3.11.0"
streamlit = "==1.40.2"
openai-whisper = ">=20240930,<20240931"
certifi = ">=2024.12.14,<2025.0.0"
textual = ">=1.0.0,<2.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
